# ble_serial_i2c_bridge

./: .gitignore  README.md  i2c_central_nrf52840.hex  i2c_nrf54l15_peripheral.hex  i2c_peripheral_nrf54l15.hex
ble_app/: main.py  requirements.txt
boards/: nrf54l15pdk_nrf54l15_cpuapp_ns.conf  nrf54l15pdk_nrf54l15_cpuapp_ns.overlay
common/inc/: ble_packet.h  crypto.h  i2c_packet.h  i2c_register_map.h  shared_keys.h
common/src/: crypto.c
i2c_central/: .clangd  CMakeLists.txt  Kconfig  app.overlay  prj.conf
i2c_central/boards/: nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
i2c_central/dts/bindings/: data-ready.yaml
i2c_central/src/: main.c
i2c_peripheral/: .clangd  CMakeLists.txt  Kconfig  README.md  TODO  i2c_peripheral.hex  notes.md  prj.conf  sysbuild.conf
i2c_peripheral/boards/: nrf54l15dk_nrf54l05_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15pdk_nrf54l15_cpuapp.conf  nrf54l15pdk_nrf54l15_cpuapp.overlay  nrf54l15pdk_nrf54l15_cpuapp_ns.conf  nrf54l15pdk_nrf54l15_cpuapp_ns.overlay
i2c_peripheral/inc/: adc.h  ble_peripheral.h  i2c_peripheral.h  i2c_registers.h
i2c_peripheral/src/: adc.c  ble_peripheral.c  i2c_peripheral.c  i2c_registers.c  main.c  twi_slave.c
src/: twi_slave.c
